Add database connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=milkcheque
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yay
+spring.datasource.username=${SQL_USER}
+spring.datasource.password=${SQL_PASS}
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
