--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=milkcheque
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yay
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/milk
 spring.datasource.username=${SQL_USER}
 spring.datasource.password=${SQL_PASS}
 spring.jpa.hibernate.ddl-auto= create-drop
