--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=milkcheque
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/milk
-spring.datasource.username=testpass
-spring.datasource.password=testpass
+spring.datasource.url=jdbc:mysql://192.168.204.53:3306/milk
+spring.datasource.username=MilkCheque
+spring.datasource.password=youssef
 spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
