--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=milkcheque
 
-spring.datasource.url=jdbc:mysql://192.168.204.53:3306/milk
-spring.datasource.username=MilkCheque
-spring.datasource.password=youssef
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.datasource.url=jdbc:mysql://milkcheque.mysql.database.azure.com:3306/milk
+spring.datasource.username=${SQL_NAME}
+spring.datasource.password=${SQL_PASS}
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
