--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -59,5 +59,6 @@ jobs:
         with:
           app-name: 'MilkChequeWebApp'
           slot-name: 'Production'
-          package: '*.jar'
+          images: milkchequeregistry.azurecr.io/milkcheque:latest
+
           
