--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Hikari connection pool settings
+spring.datasource.hikari.max-lifetime=1500000  
+spring.datasource.hikari.idle-timeout=600000    
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.connection-test-query=SELECT 1
