--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Hikari connection pool settings
 spring.datasource.hikari.max-lifetime=1500000  
 spring.datasource.hikari.idle-timeout=600000    
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.connection-test-query=SELECT 1
+spring.jpa.open-in-view=true
