--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy JAR app to Azure Web App - MilkChequeWebApp
+name: Build and Deploy Docker Image to Azure Web App
 
 on:
   push:
@@ -10,55 +7,32 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Java version
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'microsoft'
-
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: java-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5D16E1EF7752471DAD6B2455B53A3E4C }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_56A8512AA5984A26BDD2FF663A7504AA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D032ABE940A649DDAA4BC68FD9B281CB }}
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      
+      - name: Azure Container Registry Login
+        uses: azure/docker-login@v1
+        with:
+          login-server: milkchequeregistry.azurecr.io
+          username: ${{ secrets.AZURE_ACR_USERNAME }}
+          password: ${{ secrets.AZURE_ACR_PASSWORD }}
+
+    
+      - name: Build and Push Docker image
+        run: |
+          docker build -t milkchequeregistry.azurecr.io/milkcheque:latest .
+          docker push milkchequeregistry.azurecr.io/milkcheque:latest
+
+     
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'MilkChequeWebApp'
           slot-name: 'Production'
-          images: milkchequeregistry.azurecr.io/milkcheque:latest
-
-          
+          images: 'milkchequeregistry.azurecr.io/milkcheque:latest'
