--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -14,13 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Azure Container Registry Login
-        uses: azure/docker-login@v1
-        with:
-          login-server: milkchequeregistry.azurecr.io
-          username: ${{ secrets.AZURE_ACR_USERNAME }}
-          password: ${{ secrets.AZURE_ACR_PASSWORD }}
-
       - name: Build and Push Docker image
         run: |
           docker build -t milkchequeregistry.azurecr.io/milkcheque:latest .
@@ -30,5 +23,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'MilkChequeWebApp'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'milkchequeregistry.azurecr.io/milkcheque:latest'
