--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -14,11 +14,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      
+      - name: Azure Container Registry Login
+        uses: azure/docker-login@v1
+        with:
+          login-server: milkchequeregistry.azurecr.io
+          username: ${{ secrets.AZURE_ACR_USERNAME }}
+          password: ${{ secrets.AZURE_ACR_PASSWORD }}
+
+      
       - name: Build and Push Docker image
         run: |
           docker build -t milkchequeregistry.azurecr.io/milkcheque:latest .
           docker push milkchequeregistry.azurecr.io/milkcheque:latest
 
+     
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
