--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'MilkChequeWebApp'
+          app-name: 'milkchequeapp'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'milkchequeregistry.azurecr.io/milkcheque:latest'
+
