--- a/.github/workflows/main_milkchequewebapp.yml
+++ b/.github/workflows/main_milkchequewebapp.yml
@@ -14,7 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      
       - name: Azure Container Registry Login
         uses: azure/docker-login@v1
         with:
@@ -22,18 +21,17 @@ jobs:
           username: ${{ secrets.AZURE_ACR_USERNAME }}
           password: ${{ secrets.AZURE_ACR_PASSWORD }}
 
-      
       - name: Build and Push Docker image
         run: |
-          docker build -t milkchequeregistry.azurecr.io/milkcheque:latest .
+          docker build -t milkchequeregistry.azurecr.io/milkcheque:latest -t milkchequeregistry.azurecr.io/milkcheque:${{ github.sha }} .
+          
           docker push milkchequeregistry.azurecr.io/milkcheque:latest
+          docker push milkchequeregistry.azurecr.io/milkcheque:${{ github.sha }}
 
-     
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'milkchequeapp'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'milkchequeregistry.azurecr.io/milkcheque:latest'
-
+          images: 'milkchequeregistry.azurecr.io/milkcheque:${{ github.sha }}'
